# sturdy-subnet

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  autoupdate_miner_steps.sh  autoupdate_validator_steps.sh  convert_state.py  docker-compose.yml  docker-entrypoint.sh  hardhat.config.js  min_compute.yml  package-lock.json  package.json  pyproject.toml  relaunch_validator.sh  requirements-dev.txt  requirements.txt  run_miner_auto_update.py  run_validator_auto_update.py  setup.py  sturdycli.py
.github/: docker.yml
.github/workflows/: docker.yml
abi/: IReserveInterestRateStrategy.json  SturdySiloStrategy.json  VariableInterestRate.json
contrib/: CONTRIBUTING.md
db/: sql.py
db/migrations/: 20240725003510_allocations.sql  20241030231410_alloc_table.sql  20250111143337_add_miners_col_active_alloc.sql
demos/: plot_simulator.py
docs/: allocation_miner.md  api_usage.md  miner.md  taofi_lp.md  validator.md  volume_miner.md  wandb.md
neurons/: commit.py  message.py  miner.py  uniswap_lp.py  validator.py
scripts/: commit.py
sturdy/: __init__.py  algo.py  constants.py  mock.py  pools.py  protocol.py  providers.py  sturdycli.py
sturdy/abi/: AdaptiveCurveIrm.json  AprOracle.json  Comet.json  IReserveInterestRateStrategy.json  IStableDebtToken.json  IVariableDebtToken.json  MetaMorpho.json  Morpho.json  Pool.json  RateTargetBaseInterestRateStrategy.json  SturdyPair.json  SturdySiloStrategy.json  VariableInterestRate.json  Yearn_V3_Vault.json
sturdy/api/: allocate_assets.py
sturdy/base/: miner.py  neuron.py  validator.py
sturdy/pool_registry/: pool_registry.py
sturdy/utils/: __init__.py  association.py  bt_alpha.py  config.py  ethmath.py  misc.py  taofi_subgraph.py  uids.py  uniswap_pool.py  wandb.py  weight_utils.py
sturdy/validator/: __init__.py  apy_binning.py  forward.py  request.py  reward.py  simulator.py  sql.py
sturdy/validator/utils/: axon.py
swap/: __init__.py  constants.py  providers.py
swap/base/: __init__.py  neuron.py  validator.py
swap/utils/: __init__.py  config.py  taofi_subgraph.py  wandb.py
swap/validator/: forward.py  reward.py
tests/: helpers.py  test_template_validator.py
tests/integration/validator/: test_integration_validator.py  test_validator.py
tests/unit/miner/: test_greedy_algorithm.py
tests/unit/validator/:  test_validator.py  plot_simulator.py  test_latency_scaling.py  test_pool_generator.py  test_pool_models.py  test_reward_helpers.py  test_simulator.py  test_sql.py  test_validator.py
