[project]
name = "sturdy-subnet"
version = "6.0.2"
description = "Bringing liquidity to Bittensor"
readme = "README.md"
authors = [
    { name = "Syeam Bin Abdullah", email = "syeamtechdemon@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10,<3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-dotenv==1.0.1",
    "gmpy2==2.2.1",
    "web3>=6.0.0,<6.19.0",
    "loguru==0.7.0",
    "wandb==0.18.7",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "beautifultable==1.1.0",
    "bittensor==9.9.0",
    "bittensor-cli==9.10.1",
    "decorator==5.1.1",
    "eth_tester==0.13.0b1",
    "fastapi==0.110.3",
    "gql==3.5.3",
    "h11==0.16.0",
    "msgpack==1.1.0",
    "msgpack-numpy-opentensor==0.5.0",
    "nest-asyncio==1.6.0",
    "numpy==2.0.2",
    "pydantic==2.10.0",
    "pydantic-core==2.27.0",
    "python-statemachine==2.4.0",
    "retry==0.9.2",
    "setuptools==70.0.0",
    "starlette==0.37.2",
    "uvicorn==0.32.1",
    "async-lru==2.0.5",
]

[project.urls]
Homepage = "https://github.com/Sturdy-Subnet/sturdy-subnet"
Repository = "https://github.com/Sturdy-Subnet/sturdy-subnet"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sturdy"]
include-package-data = true

[tool.setuptools.package-data]
sturdy = ["abi/*.json"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 127
indent-width = 4
# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
ignore = ["NPY002", "F405", "F403", "E402", "D", "ANN001", "FBT001", "FBT002", "TD002", "TD003", "PLR", "C901", "BLE001", "ANN401", "N801", "EM101", "EM102", "TRY003", "S608", "FIX002", "N805", "N815", "N806", "PT009", "COM812", "S101", "SLF001", "T201", "DTZ003"]
select = ["ALL"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 20

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"